# ExampleBasedFacialRigging

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindOpenMesh.cmake
examples/: weights.csv
src/: Args.h  main.cpp
src/ebfr/: BlendshapeSolver.cpp  BlendshapeSolver.h  GradientSolver.cpp  GradientSolver.h  Gradients.cpp  Gradients.h  Parameter.h  Rig.cpp  Rig.h  SolverBase.cpp  SolverBase.h  VertexSolver.cpp  VertexSolver.h  WeightsSolver.cpp  WeightsSolver.h
src/shared/: CSV.cpp  CSV.h  FS.cpp  FS.h  Matrix.h  Mesh.cpp  Mesh.h  SolverUtil.cpp  SolverUtil.h  Timing.h  Util.cpp  Util.h
src/test/: gradient.cpp  posegen.cpp  vertex.cpp  weights.cpp
